Add Docker and workspace setup for backend and frontend apps
Introduce `docker-compose.yml` for simplified multi-service development, including configurations for backend and frontend services. Add workspace structures for `apps` and `libs`, with dependencies and Dockerfiles for both services. This change enables modular development and deployment of the applications.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "workspaces": [
-    "libs/*"
+    "libs/*",
+    "apps/*"
   ],
   "main": "index.js",
   "scripts": {
