Migrate frontend to Vite, update Node versions, and improve Docker setup.
Replaced the old frontend setup with a Vite-based configuration, including new build scripts, styles, and assets. Updated backend and frontend Dockerfiles to use Node 23 and added necessary dependencies for build processes. Adjusted ports, improved Docker development experience, and refined package management with legacy-peer-deps and rebuild strategies.

--- a/apps/frontend-app/package.json
+++ b/apps/frontend-app/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "@workspace/common": "*",
-    "@workspace/browser": "*"
+    "@workspace/browser": "*",
+    "@workspace/common": "*"
   },
   "scripts": {
-    "dev": "vite --host 0.0.0.0"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^6.1.0"
   }
 }
