--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,8 @@
     "@workspace/node": "*"
   },
   "scripts": {
-    "dev": "nodemon --watch . --watch ../../libs -e js,json main.js"
+    "development": "NODE_ENV=development nodemon --watch . --watch ../../libs -e js,json main.js",
+    "production": "NODE_ENV=production node main.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
