--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,9 +8,9 @@
     "@workspace/common": "*"
   },
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "development": "vite",
+    "production": "vite preview --port 3000"
   },
   "devDependencies": {
     "vite": "^6.1.0"
