Add Traefik setup and enable TLS with local certificates
Introduced Traefik to manage routing, TLS, and certificate handling. Added configuration files, certificates, and .env variables for Traefik and TLS setup. Updated backend and frontend services for domain-based routing and enhanced logging levels.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,8 +8,8 @@
     "@workspace/node": "*"
   },
   "scripts": {
-    "development": "NODE_ENV=development nodemon --watch . --watch ../../libs -e js,json main.js",
-    "production": "NODE_ENV=production node main.js"
+    "development": "ENV=development nodemon --watch . --watch ../../libs -e js,json main.js",
+    "production": "ENV=production node main.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
