--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,73 @@
 services:
+  traefik:
+    image: traefik:latest
+    container_name: traefik
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
+    deploy:
+      replicas: 1
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /etc/localtime:/etc/localtime:ro
+      - ./traefik/acme:/acme
+      - ./traefik/traefik.prod.yml:/etc/traefik/traefik.yml:ro
+    command:
+      - "--configfile=/etc/traefik/traefik.yml"
+      - "--log.level=${TRAEFIK_LOG_LEVEL:-INFO}"
+    networks:
+      - intersides-workspace-network
 
   backend:
+    container_name: backend
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
       args:
         SERVICE: backend
+        ENV: ${ENV}
     ports:
-      - "8080:3000" # Map host port 4001 to container's port 3000
+      - "${BACKEND_PORT}:${DOCKER_FILE_PORT}"
     environment:
-      NODE_ENV: production
+      - ENV=${ENV}
+      - PROTOCOL=${PROTOCOL}
+      - DOMAIN=${DOMAIN}
+      - SUBDOMAIN=${BACKEND_SUBDOMAIN}
+      - PORT=${BACKEND_PORT}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=Host(`${BACKEND_SUBDOMAIN}.${DOMAIN}`)"
+      - "traefik.http.routers.backend.tls=true"
+      - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.tls.certresolver=letsencrypt"
+      - "traefik.http.services.backend.loadbalancer.server.port=${DOCKER_FILE_PORT}"
     networks:
       - intersides-workspace-network
 
   frontend:
+    container_name: frontend
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
       args:
         SERVICE: frontend
+        ENV: ${ENV}
     ports:
-      - "3000:3000" # Map host port 4002 to container's port 3000
+      - "${FRONTEND_PORT}:${DOCKER_FILE_PORT}"
     environment:
-      NODE_ENV: production
+      - ENV=${ENV}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`${FRONTEND_SUBDOMAIN}.${DOMAIN}`)"
+      - "traefik.http.routers.frontend.entrypoints=websecure"
+      - "traefik.http.routers.frontend.tls=true"
+      - "traefik.http.routers.frontend.tls.certresolver=letsencrypt"
+      - "traefik.http.services.frontend.loadbalancer.server.port=${DOCKER_FILE_PORT}"
     networks:
       - intersides-workspace-network
 
 networks:
   intersides-workspace-network:
+    name: intersides-workspace-network
     driver: bridge
-#    driver: overlay
-#    attachable: true
