Add CryptoService and integrate unique app instance IDs
Introduced a new `CryptoService` to generate unique app instance IDs and handle cryptographic operations. Updated the frontend and backend to utilize this service for generating instance-specific IDs. Also made relevant changes to configurations, documentation, and dependencies to support the updates.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,8 +4,10 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "@alkimia/lib": "^1.0.9",
     "@workspace/common": "*",
-    "@workspace/node": "*"
+    "@workspace/node": "*",
+    "jose": "^6.0.10"
   },
   "scripts": {
     "development": "ENV=development nodemon --watch . --watch ../../libs -e js,json main.js",
