Update proxy to support lazy Docker container loading
Refactored the HTTPS proxy to automatically start and manage Docker containers on-demand when incoming requests are received. Integrated lazy loading logic, updated routing rules, and improved error handling. Updated documentation to reflect these changes, emphasizing the streamlined container startup process.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   ],
   "main": "index.js",
   "scripts": {
+    "development": "ENV=development nodemon --watch . proxy.js",
+    "production": "ENV=production node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
