--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "development": "ENV=development nodemon --watch . proxy.js",
-    "production": "ENV=production node main.js",
+    "production": "ENV=production node proxy.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
