--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,8 @@
     "@alkimia/lib": "^1.0.9",
     "@workspace/common": "*",
     "@workspace/node": "*",
-    "jose": "^6.0.10"
+    "jose": "^6.0.10",
+    "pm2": "^6.0.5"
   },
   "scripts": {
     "development": "pm2-runtime start ecosystem.config.cjs --env development",
