--- a/package.json
+++ b/package.json
@@ -11,21 +11,15 @@
   "scripts": {
     "development": "ENV=development nodemon --watch . proxy.js",
     "production": "ENV=production node proxy.js",
-
     "docker-build-base": "docker build -f Dockerfile.base -t intersides-workspace-base .",
-
     "docker-build-backend": "docker build -f apps/backend/Dockerfile -t intersides-workspace-backend .",
     "docker-debug-backend": " docker run -it --rm --entrypoint sh intersides-workspace-backend",
     "docker-run-backend": " docker run -it --rm -p 8080:3000 -e ENV=development intersides-workspace-backend",
-
     "docker-build-frontend": "docker build -f apps/frontend/Dockerfile -t intersides-workspace-frontend .",
     "docker-run-frontend": " docker run -it --rm --entrypoint sh intersides-workspace-frontend",
-
     "test-docker-build": "docker rm -f test-docker-backend && docker build -f Test.Dockerfile --target=backend --build-arg SERVICE=backend --build-arg ENV=production .",
-
     "test-docker-run": "docker run -d --name test-docker-backend -p 8080:3000 -e ENV=production -e PROTOCOL=https -e DOMAIN=alkimia.localhost -e SUBDOMAIN=server -v ./apps/backend:/app -v ./libs:/app/libs test-docker-backend tail -f /dev/null",
     "test-docker-build_run": "npm run test-docker-build && npm run test-docker-run",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -34,5 +28,8 @@
   "description": "",
   "dependencies": {
     "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "eslint": "^9.25.1"
   }
 }
