Integrate @intersides/console and refactor logging
Replaced native console methods with @intersides/console for standardized logging across the project. Adjusted ESLint indent rule for improved code consistency. Introduced incremental stress testing and enhanced server/router functionality.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,7 @@
     "pm2": "^6.0.5"
   },
   "scripts": {
-    "development": "pm2-runtime start ecosystem.config.cjs --env development",
-    "production": "pm2-runtime start ecosystem.config.cjs --env production"
+    "development": "ENV=development pm2-runtime start ecosystem.config.cjs --env development",
+    "production": "ENV=production pm2-runtime start ecosystem.config.cjs --env production"
   }
 }
