--- a/libs/node/package.json
+++ b/libs/node/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "@intersides/console": "^1.0.2",
     "bcryptjs": "^3.0.2"
   }
 }
