Add WebSocket support, MQTT broker integration, and stress-agent setup
Introduced WebSocket support in HTTP services and added MQTT broker setup using Docker. Created the "stress-agent" service with necessary files, including Dockerfile and package configuration, to test and apply load. Enhanced DockerService for better container management and integrated the Mosquitto broker as part of the environment.

--- a/libs/node/package.json
+++ b/libs/node/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@intersides/console": "^1.0.2",
-    "bcryptjs": "^3.0.2"
+    "bcryptjs": "^3.0.2",
+    "ws": "^8.18.2"
   }
 }
