--- a/libs/node/package.json
+++ b/libs/node/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@intersides/console": "^1.0.2",
     "bcryptjs": "^3.0.2",
+    "mqtt": "^5.12.0",
     "ws": "^8.18.2"
   }
 }
