--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "docker-build-base": "docker build -f Dockerfile.base -t intersides-workspace-base .",
     "docker-build-backend": "docker build -f apps/backend/Dockerfile -t intersides-workspace-backend .",
     "docker-debug-backend": "docker run -it --rm --entrypoint sh intersides-workspace-backend",
-    "docker-run-backend": " docker run -it --rm -p 8080:3000 -e ENV=development intersides-workspace-backend",
+    "docker-run-backend": "docker run -it --rm -p 8080:3000 -e ENV=development  intersides-workspace-backend",
     "docker-build-frontend": "docker build -f apps/frontend/Dockerfile -t intersides-workspace-frontend .",
     "docker-run-frontend": " docker run -it --rm --entrypoint sh intersides-workspace-frontend",
+    "docker-build-stress-agent": "docker build -f stress-agent/Dockerfile -t alkimia-stress-agent .",
+    "docker-debug--stress-agent": "docker run -it --rm --entrypoint sh alkimia-stress-agent",
+    "docker-run--stress-agent": "docker run -it --name alkimia-stress-agent --rm -p 7777:3000 -e ENV=development alkimia-stress-agent",
     "test-docker-build": "docker rm -f test-docker-backend && docker build -f Test.Dockerfile --target=backend --build-arg SERVICE=backend --build-arg ENV=production .",
     "test-docker-run": "docker run -d --name test-docker-backend -p 8080:3000 -e ENV=production -e PROTOCOL=https -e DOMAIN=alkimia.localhost -e SUBDOMAIN=server -v ./apps/backend:/app -v ./libs:/app/libs test-docker-backend tail -f /dev/null",
     "test-docker-build_run": "npm run test-docker-build && npm run test-docker-run",
@@ -31,6 +34,7 @@
   "description": "",
   "dependencies": {
     "@intersides/console": "^1.0.2",
+    "mqtt": "^5.12.0",
     "pm2": "^6.0.5",
     "ws": "^8.18.1"
   },
