--- a/stress-agent/package.json
+++ b/stress-agent/package.json
@@ -4,6 +4,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
+    "docker-build": "docker build -t intersides-workspace-stresser .",
+    "docker-run": "docker run -d --name intersides-workspace-stresser --network alkimia-net -p 7777:3000",
     "development": "NODE_TLS_REJECT_UNAUTHORIZED=0 ENV=development pm2 start ecosystem.config.cjs --env development --no-daemon",
     "production": "ENV=production pm2-runtime start ecosystem.config.cjs --env production",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,9 +15,11 @@
   "description": "",
   "dependencies": {
     "@alkimia/lib": "^1.0.9",
-    "@workspace/browser": "*",
     "@workspace/common": "*",
     "@workspace/node": "*",
     "sass": "^1.86.3"
+  },
+  "devDependencies": {
+    "pm2": "^6.0.5"
   }
 }
