--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
   "dependencies": {
     "@intersides/console": "^1.0.2",
     "mqtt": "^5.12.0",
-    "pm2": "^6.0.5",
     "ws": "^8.18.1"
   },
   "devDependencies": {
+    "esbuild": "^0.25.4",
     "eslint": "^9.25.1",
+    "pm2": "^6.0.5",
     "vitest": "^3.1.2"
   }
 }
