Add MongoDB service integration and dotenv support
Introduced a new `MongoDbService` module for centralized management of database operations, along with environment variable support using dotenv. This includes automated collection and index creation, session tracking, and improved service configurability through `.env` variables. Updated related modules and configurations to integrate MongoDB and streamline environment variable handling.

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ FRONTEND_PORT=3000
 BACKEND_SUBDOMAIN=server
 BACKEND_PORT=7070
 
+MONGO_DB_NAME=alkimia
+MONGO_DB_URI=mongodb://mongoadmin:secret@localhost:27017/?replicaSet=rs0
+
+MQTT_BROKER_URL=mqtt://mqtt.alkimia.localhost/
