--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "description": "",
   "dependencies": {
     "@intersides/console": "^1.0.2",
+    "dotenv": "^16.5.0",
+    "mongodb": "^6.16.0",
     "mqtt": "^5.12.0",
     "ws": "^8.18.1"
   },
