Refactor container monitoring and enhance health checks.
Removed redundant container monitoring logic for load balancer and added detailed headers to Docker health checks. Improved backend handling for health check requests and introduced a "/healthcheck" endpoint for better container health validation.

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -27,8 +27,7 @@ RUN echo "mode: $ENV"
 EXPOSE 3000
 
 # Health check via HTTP
-HEALTHCHECK --interval=5s --timeout=3s --retries=10 CMD curl --fail http://localhost:3000/ping || exit 1
-
+HEALTHCHECK --interval=5s --timeout=3s --retries=10 CMD curl --fail -H "User-Agent: Docker-Health-Check" -H "X-Source: Docker" -H "Content-Type: application/json" -H "Accept: application/json" http://localhost:3000/ping || exit 1
 # Use PM2 runtime for both development and production
 # The environment will be passed as an argument
 CMD ["sh", "-c", "npm run \"$ENV\""]
