Rename LoadBalancer to OrchestratorService and improve container setup.
This change updates service references, file paths, and documentation to rename the LoadBalancer to OrchestratorService. Improvements include adding health checks, environment configuration, and better handling for Dockerfile-based builds. Additionally, minor logging and container infrastructure enhancements were made.

--- a/services/OrchestratorService/Dockerfile
+++ b/services/OrchestratorService/Dockerfile
@@ -18,7 +18,7 @@ COPY --from=base /repo/libs/browser ./libs/browser
 COPY --from=base /repo/libs/node ./libs/node
 
 # Copy backend app to root of /app
-COPY services/LoadBalancer .
+COPY services/OrchestratorService .
 
 # Ensure workspace links are correct (if needed)
 RUN npm install
