--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -17,6 +17,7 @@ RUN npm install pm2 -g
 COPY libs/common ./libs/common
 COPY libs/node ./libs/node
 COPY libs/browser ./libs/browser
+COPY certs/ ./certs
 
 # Make sure the libraries are properly linked
 RUN npm rebuild
