--- a/stress-agent/package.json
+++ b/stress-agent/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docker-build": "docker build -t intersides-workspace-stresser .",
     "docker-run": "docker run -d --name intersides-workspace-stresser --network alkimia-net -p 7777:3000",
-    "development": "NODE_EXTRA_CA_CERTS=../certs/fullchain.pem ENV=development pm2 start ecosystem.config.cjs --env development --no-daemon",
+    "development": "NODE_EXTRA_CA_CERTS=/app/certs/fullchain.pem ENV=development pm2 start ecosystem.config.cjs --env development --no-daemon",
     "production": "ENV=production pm2-runtime start ecosystem.config.cjs --env production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
