Implement monitoring dashboard with MQTT integration and fix WebSocket connectivity
This commit introduces significant enhancements to the container orchestration system:

- Add ProxyRouter.js for handling API requests to monitor container services
- Implement dashboard application with real-time service monitoring
- Integrate MQTT client for real-time updates in the dashboard
- Fix MQTT WebSocket connectivity by properly configuring port 9001
- Enhance DockerManager event handling with improved action type detection
- Optimize container monitoring interval from 2s to 5s for better performance
- Refactor WebSocketService and move it to modules directory
- Update Dockerfiles for dashboard and frontend applications
- Improve error handling in ContainerMonitorService
- Add playground components for testing MQTT connectivity

These changes provide a comprehensive monitoring solution for the
container scaling system while fixing the WebSocket connectivity issues
that were preventing MQTT clients from connecting properly.

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -7,7 +7,8 @@
     "@alkimia/lib": "^1.0.9",
     "@workspace/browser": "*",
     "@workspace/common": "*",
-    "@workspace/node": "*"
+    "@workspace/node": "*",
+    "mqtt": "^5.13.1"
   },
   "scripts": {
     "create-app-module": "npx @alkimia/framework --srcDir=src/modules/",
